--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
 
+<!--
+need a header with: website name and secondary info 
+need a pic of me
+need an intro section with who i am and where i am 
+need an about me section with a desciption about my web dev passions and interests outside of web development 
+need a contact section with my linkedin profile, github profile, and email address 
+need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p, link, ul, ol, img, a, hr
+-->
+
+
+<!DOCTYPE html>
+<html>  
+  <head>
+    <meta charset = "utf-8" />
+    <meta name = "viewport" content = "width = device - width">
+    <title> Taylor Duggan · Portfolio> </title>
+    <link href = "style.css" rel = "stylesheet" type = "text/css"/> 
+  </head>
+  
+  <header>
+    <h1> Taylor Duggan </h1>
+    <h2> Software Engineer </h2>
+  </header>  
+  
+  <body>
+    <img src = ""   alt = "Image of Taylor Duggan"> 
+    <h1> Hello! I'm Taylor Duggan </h1>
+    <p>I am a software developer currently living in St. Louis, Missouri. </p> 
+    <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
+    <p> 
+      <ul>
+        <li> Serving others and finding ways to make people's lives better. </li>
+        <li> Traveling and experiencing new cultures and cuisines. </li>
+        <li> Seeking after ways to grow and learn. </li>
+      </ul>
+    </p>
+    <p> Though I enjoy learning the art of software engineering, a few of my other hobbies include: </p>
+      <ol>
+        <li> Cooking. I love trying new recipes with interesting spices.</li>
+        <li> Painting. I specifically find joy in multi-media abstract work. </li>
+        <li> Traveling. I have been to over 28 countries and 30 states.</li> 
+      </ol>  
+
+    <p> Please take a look at my website and feel free to
+      <a href = "mailto: duggan.taylor24@yahoo.com"> Contact Me.</a>
+    </p>
+  
+    <hr>
+  
+    <h1> About Taylor </h1>
+      <p> After graduating college with a Psychology degree, I spent several years working in the non-profit sector. 
+      Enjoying the growth and experience that was provided through the various responsibilities I had, I eventually wanted a new challenge in a different sector. <p>
+      <p> Software engineering has been a dream of mine for the past several years and I am overjoyed at the opportunity to study with <a href= "https://www.thinkful.com/" target = "_blank">Thinkful</a>. </p>
+      <p> If you are looking to hire a new developer, please reach out! My experience and gained wisdom from the non-profit world mixed with my knowledge of software engineering is just what you need for your next project. </p>
+  
+    <hr>
+    <h1> Contact Taylor </h1>
+      <p> I'd love to hear from you. Contact or follow me through the links below: </p>
+      <p>
+        <ul>
+          <li> <a href = "https://www.linkedin.com/in/taylor-duggan/" target = "_blank"> LinkedIn </a></li>
+          <li> <a href = https://github.com/TaylorElle" target = "_blank"> GitHub </a> </li>
+            <li> <a href = "mailto: duggan.taylor24@yahoo.com"> Email </a> </li>
+         </ul>   
+  </body>  
+      
+  
+  <footer>
+    <p> © Taylor Duggan </p>
+  </footer>
+  
+  
+</html>  
