--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
   </header>  
   
   <body>
-    <img src = ""   alt = "Image of Taylor Duggan"> 
+    <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan"> 
     <h1> Hello! I'm Taylor Duggan </h1>
     <p>I am a software developer currently living in St. Louis, Missouri. </p> 
     <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
