--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
 <!DOCTYPE html>
 <html>  
   <head>
-    <meta charset = "utf-8" />
+    <meta charset = "utf-8">
     <meta name = "viewport" content = "width = device - width">
     <title> Taylor Duggan · Portfolio> </title>
     <link href = "style.css" rel = "stylesheet" type = "text/css"/> 
   </head>
   
+  <body>
+
   <header>
     <h1> Taylor Duggan </h1>
-    <h2> Software Engineer </h2>
+    <h3> Software Engineer </h3>
   </header>  
   
-  <body>
     <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan"> 
-    <h1> Hello! I'm Taylor Duggan </h1>
+    <h2> Hello! I'm Taylor Duggan </h2>
     <p>I am a software developer currently living in St. Louis, Missouri. </p> 
     <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
     <p> 
@@ -48,14 +49,14 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
   
     <hr>
   
-    <h1> About Taylor </h1>
+    <h2> About Taylor </h2>
       <p> After graduating college with a Psychology degree, I spent several years working in the non-profit sector. 
       Enjoying the growth and experience that was provided through the various responsibilities I had, I eventually wanted a new challenge in a different sector. <p>
       <p> Software engineering has been a dream of mine for the past several years and I am overjoyed at the opportunity to study with <a href= "https://www.thinkful.com/" target = "_blank">Thinkful</a>. </p>
       <p> If you are looking to hire a new developer, please reach out! My experience and gained wisdom from the non-profit world mixed with my knowledge of software engineering is just what you need for your next project. </p>
   
     <hr>
-    <h1> Contact Taylor </h1>
+    <h2> Contact Taylor </h2>
       <p> I'd love to hear from you. Contact or follow me through the links below: </p>
       <p>
         <ul>
@@ -63,12 +64,12 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
           <li> <a href = https://github.com/TaylorElle" target = "_blank"> GitHub </a> </li>
             <li> <a href = "mailto: duggan.taylor24@yahoo.com"> Email </a> </li>
          </ul>   
-  </body>  
       
   
   <footer>
     <p> © Taylor Duggan </p>
   </footer>
   
-  
+</body>  
+
 </html>  
