adding the alt tag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
     <h3> Software Engineer </h3>
   </header>  
   
-    <img src= "images/TaylorDuggan.jpg" class="image-circle"> 
+    <img src= "images/TaylorDuggan.jpg" class="image-circle" alt = "Image of Taylor Duggan> 
     <h2> Hello! I'm Taylor Duggan </h2>
     <p>I am a software developer currently living in St. Louis, Missouri. </p> 
     <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
