--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
   <head>
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width = device - width">
-    <title> Taylor Duggan · Portfolio> </title>
+    <title> Taylor Duggan · Portfolio </title>
     <link href = "style.css" rel = "stylesheet" type = "text/css"/> 
   </head>
   
