index wording changes

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
     <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
     <p> 
       <ul>
-        <li> Serving others and finding ways to make people's lives better. </li>
+        <li> Serving others and finding ways to make lives better. </li>
         <li> Traveling and experiencing new cultures and cuisines. </li>
         <li> Seeking after ways to grow and learn. </li>
       </ul>
     </p>
-    <p> Though I enjoy learning the art of software engineering, a few of my other hobbies include: </p>
+    <p> Though I enjoy the art of software engineering, a few of my other hobbies include: </p>
       <ol>
         <li> Cooking. I love trying new recipes with interesting spices.</li>
-        <li> Painting. I specifically find joy in multi-media abstract work. </li>
+        <li> Painting. I am specifically enthusiastic about multi-media abstract work. </li>
         <li> Traveling. I have been to over 28 countries and 30 states.</li> 
       </ol>  
 
@@ -52,7 +52,7 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
     <div>
     <h2> About Taylor </h2>
       <p> After graduating college with a Psychology degree, I spent several years working in the non-profit sector. 
-      Enjoying the growth and experience that was provided through the various responsibilities I had, I eventually wanted a new challenge in a different sector. <p>
+      Thought I enjoyed the growth and experience that was provided through the various responsibilities I had, I eventually wanted a new challenge in a different sector. <p>
       <p> Software engineering has been a dream of mine for the past several years and I am overjoyed at the opportunity to study with <a href= "https://www.thinkful.com/" target = "_blank">Thinkful</a>. </p>
       <p> If you are looking to hire a new developer, please reach out! My experience and gained wisdom from the non-profit world mixed with my knowledge of software engineering is just what you need for your next project. </p>
     </div>
