--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ need these HTML elements: doctype, html, head, body, meta, title, h1, h2, h3, p,
     <link href = "style.css" rel = "stylesheet" type = "text/css"/> 
   </head>
   
-  <body style = "background:lightgray";>
+  <body style = "background-color:RosyBrown";>
 
   <header>
     <h1> Taylor Duggan </h1>
