--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <!-- would it be best to have nesting article containers like seen below? -->
   <article>
     <header>
-      <h1> Taylor Duggan </h1>
-      <h3> Software Engineer </h3>
+      <div>
+        <h1> Taylor Duggan </h1>
+        <h4> Software Engineer </h4>
+      </div>  
     </header>  
 
   <main>
