--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width = device - width">
-    <title> Taylor Duggan · Portfolio </title>
+    <title> Taylor Duggan · Portfolio> </title>
     <link href = "style.css" rel = "stylesheet" type = "text/css"/> 
   </head>
   
@@ -13,15 +13,14 @@
 <!-- would it be best to have nesting article containers like seen below? -->
   <article>
     <header>
-      <div>
-        <h1> Taylor Duggan </h1>
-        <h4> Software Engineer </h4>
-      </div>  
+      <h1> Taylor Duggan </h1>
+      <h3> Software Engineer </h3>
     </header>  
 
   <main>
-      <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan"> 
+      <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan" class = "center"> 
     <article>
+      <div>
       <h2> Hello! I'm Taylor Duggan </h2>
       <p>I am a software developer currently living in St. Louis, Missouri. </p> 
       <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
@@ -42,6 +41,7 @@
       <p> Please take a look at my website and feel free to
         <a href = "mailto: duggan.taylor24@yahoo.com"> Contact Me.</a>
       </p>
+      </div>
     </article>
       <hr>
           <!-- question for aaron: do i do three article containers on this page? one for -->                                      
