--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>  
 
   <main>
-      <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan" class = "center"> 
+      <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan" class = "center, image-circle"> 
     <article>
       <div>
       <h2> Hello! I'm Taylor Duggan </h2>
