--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>
           <ul>
             <li> <a href = "https://www.linkedin.com/in/taylor-duggan/" target = "_blank"> LinkedIn </a></li>
-            <li> <a href = https://github.com/TaylorElle" target = "_blank"> GitHub </a> </li>
+            <li> <a href = "https://github.com/TaylorElle" target = "_blank"> GitHub </a> </li>
               <li> <a href = "mailto: duggan.taylor24@yahoo.com"> Email </a> </li>
           </ul>  
       </div>
