--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body>
 
-<!-- would it be best to have nesting article containers like seen below? -->
+<!-- would it be best to have nesting article containers like seen below?  do i need div containers?-->
   <article>
     <header>
       <h1> Taylor Duggan </h1>
