--- a/index.html
+++ b/index.html
@@ -9,68 +9,64 @@
   </head>
   <!-- put everything showing on the page in the body section -->
   <body>
-  <!-- header that holds the title of that webpage-->  
+    <!-- header that holds the title of that webpage-->  
     <header>
       <h1> Taylor Duggan </h1>
       <h3> Software Engineer </h3>
     </header>  
-<!-- main section with all the goodies -->
-  <main>
-    <!-- image with alt writing and any styling classes -->
+    <!-- main section with all the goodies -->
+    <main>
+      <!-- image with alt writing and any styling classes -->
       <img src = "images/TaylorDuggan.jpg" alt = "Image of Taylor Duggan" class = "center-circle"> 
-    <!-- a section container -->
-      <section>
-      <h2> Hello! I'm Taylor Duggan </h2>
-      <p>I am a software developer currently living in St. Louis, Missouri. </p> 
-      <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
-        <!-- unordered list -->
+      <!-- a section container -->
+     <section>
+        <h2> Hello! I'm Taylor Duggan </h2>
+        <p>I am a software developer currently living in St. Louis, Missouri. </p> 
+        <p> As a former non-profit administrator and overseas missionary, I enjoy:</p>
+          <!-- unordered list -->
         <ul>
           <li> Serving others and finding ways to make people's lives better. </li>
           <li> Traveling and experiencing new cultures and cuisines. </li>
           <li> Seeking after ways to grow and learn. </li>
         </ul>
-      <p> Though I enjoy learning the art of software engineering, a few of my other hobbies include: </p>
-        <!-- ordered list-->
+        <p> Though I enjoy learning the art of software engineering, a few of my other hobbies include: </p>
+          <!-- ordered list-->
         <ol>
           <li> Cooking. I love trying new recipes with interesting spices.</li>
           <li> Painting. I specifically find joy in multi-media abstract work. </li>
           <li> Traveling. I have been to over 28 countries and 30 states.</li> 
         </ol>  
         !-- contact me link to my email address-->
-      <p> Please take a look at my website and feel free to
-        <a href = "mailto:duggan.taylor24@yahoo.com"> Contact Me.</a>
-      </p>
+        <p> Please take a look at my website and feel free to <a href = "mailto:duggan.taylor24@yahoo.com"> Contact Me.</a>
+        </p>
       </section>
-    <!-- separate sections by a horizontal rule-->
+      <!-- separate sections by a horizontal rule-->
       <hr>
-    <!-- another section-->
+      <!-- another section-->
       <section>
-      <h2> About Taylor </h2>
+        <h2> About Taylor </h2>
         <p> After graduating college with a Psychology degree, I spent several years working in the non-profit sector. 
         Enjoying the growth and experience that was provided through the various responsibilities I had, I eventually wanted a new challenge in a different sector. <p>
         <p> Software engineering has been a dream of mine for the past several years and I am overjoyed at the opportunity to study with <a href= "https://www.thinkful.com/" target = "_blank">Thinkful</a>. </p>
         <p> If you are looking to hire a new developer, please reach out! My experience and gained wisdom from the non-profit world mixed with my knowledge of software engineering is just what you need for your next project. </p>
       </section>
-        <!-- separate sections by a horizontal rule-->
+      <!-- separate sections by a horizontal rule-->
       <hr>
-    <!-- an article container with contact details included -->
-    <article>  
+       <!-- an article container with contact details included -->
+      <article>  
       <h2> Contact Taylor </h2>
-        <p> I'd love to hear from you. Contact or follow me through the links below: </p>
-        <p>
-          <ul>
-            <li> <a href = "https://www.linkedin.com/in/taylor-duggan/" target = "_blank"> LinkedIn </a></li>
-            <li> <a href = "https://github.com/TaylorElle" target = "_blank"> GitHub </a> </li>
-            <li> <a href = "mailto:duggan.taylor24@yahoo.com"> Email </a> </li>
-          </ul>  
+      <p> I'd love to hear from you. Contact or follow me through the links below: </p>
+      <ul>
+        <li> <a href = "https://www.linkedin.com/in/taylor-duggan/" target = "_blank"> LinkedIn </a></li>
+        <li> <a href = "https://github.com/TaylorElle" target = "_blank"> GitHub </a> </li>
+        <li> <a href = "mailto:duggan.taylor24@yahoo.com"> Email </a> </li>
+      </ul>  
       </article>
-  </main>  
-  <!-- a footer-->
-  <footer>
-    <p> © Taylor Duggan </p>
-  </footer>
-  
-</body>  
-
+    </main>  
+    <!-- a footer-->
+    <footer>
+      <p> © Taylor Duggan </p>
+    </footer>
+  </body>  
 </html>  
 <!-- close up all those tags -->
