--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- put that important HTML stuff in here -->
 <!DOCTYPE html>
-<html>  
+<html lang="en-US">  
   <head>
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width = device - width">
