--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li> Painting. I specifically find joy in multi-media abstract work. </li>
           <li> Traveling. I have been to over 28 countries and 30 states.</li> 
         </ol>  
-        !-- contact me link to my email address-->
+        <!-- contact me link to my email address-->
         <p> Please take a look at my website and feel free to <a href = "mailto:duggan.taylor24@yahoo.com"> Contact Me.</a>
         </p>
       </section>
